--- a/package.json
+++ b/package.json
@@ -6,33 +6,78 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e",
+    "ng2ninja": "ng2ninja",
+    "format": "prettier --write \"{src,cypress}/**/*.+(ts|js|json|html|css)\"",
+    "postinstall": "npm run format"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.2.0",
-    "@angular/common": "^18.2.0",
-    "@angular/compiler": "^18.2.0",
-    "@angular/core": "^18.2.0",
-    "@angular/forms": "^18.2.0",
-    "@angular/platform-browser": "^18.2.0",
-    "@angular/platform-browser-dynamic": "^18.2.0",
-    "@angular/router": "^18.2.0",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.14.10"
+    "@angular/animations": "18.2.0",
+    "@angular/common": "18.2.0",
+    "@angular/compiler": "18.2.0",
+    "@angular/core": "18.2.0",
+    "@angular/forms": "18.2.0",
+    "@angular/platform-browser": "18.2.0",
+    "@angular/router": "18.2.0",
+    "@fortawesome/fontawesome-free": "6.6.0",
+    "bootstrap": "5.3.3",
+    "rxjs": "7.8.1",
+    "tslib": "2.6.3",
+    "zone.js": "0.14.10"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.2.0",
-    "@angular/cli": "^18.2.0",
-    "@angular/compiler-cli": "^18.2.0",
-    "@types/jasmine": "~5.1.0",
-    "jasmine-core": "~5.2.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.5.2"
+    "@angular-devkit/build-angular": "^18.2.4",
+    "@angular/cli": "18.2.0",
+    "@angular/compiler-cli": "18.2.0",
+    "@angular/localize": "18.2.0",
+    "@angular/platform-browser-dynamic": "18.2.0",
+    "@cypress/schematic": "2.5.2",
+    "@types/jasmine": "5.1.4",
+    "@typescript-eslint/eslint-plugin": "^8.6.0",
+    "@typescript-eslint/parser": "^8.6.0",
+    "angular-eslint": "18.3.0",
+    "cypress": "13.13.3",
+    "eslint": "8.57.1",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-deprecation": "3.0.0",
+    "eslint-plugin-prettier": "5.2.1",
+    "jasmine-core": "5.2.0",
+    "karma": "6.4.4",
+    "karma-chrome-launcher": "3.2.0",
+    "karma-coverage": "2.2.1",
+    "karma-firefox-launcher": "2.1.3",
+    "karma-jasmine": "5.1.0",
+    "karma-jasmine-html-reporter": "2.1.0",
+    "karma-json-reporter": "1.2.1",
+    "karma-mocha-reporter": "2.2.5",
+    "mochawesome": "7.1.3",
+    "mochawesome-merge": "4.3.0",
+    "ng2ninja": "^4.0.0",
+    "prettier": "3.3.3",
+    "typescript": "5.5.4",
+    "typescript-eslint": "8.1.0"
+  },
+  "prettier": {
+    "printWidth": 140,
+    "singleQuote": true,
+    "arrowParens": "avoid",
+    "trailingComma": "none",
+    "overrides": [
+      {
+        "files": "*.component.html",
+        "options": {
+          "parser": "angular"
+        }
+      },
+      {
+        "files": "index.html",
+        "options": {
+          "parser": "html"
+        }
+      }
+    ]
   }
 }
